libs/sdk-flutter/ios/Classes/frb_generated.h

typedef struct wire_cst_list_prim_u_8_strict {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_strict;
typedef struct wire_cst_opening_fee_params {
  uint64_t min_msat;
  uint32_t proportional;
  struct wire_cst_list_prim_u_8_strict *valid_until;
  uint32_t max_idle_time;
  uint32_t max_client_to_self_delay;
  struct wire_cst_list_prim_u_8_strict *promise;
} wire_cst_opening_fee_params;
typedef struct wire_cst_prepare_redeem_onchain_funds_request {
  struct wire_cst_list_prim_u_8_strict *to_address;
  uint32_t sat_per_vbyte;
} wire_cst_prepare_redeem_onchain_funds_request;
typedef struct wire_cst_prepare_refund_request {
  struct wire_cst_list_prim_u_8_strict *swap_address;
  struct wire_cst_list_prim_u_8_strict *to_address;
  uint32_t sat_per_vbyte;
} wire_cst_prepare_refund_request;
typedef struct wire_cst_receive_onchain_request {
  struct wire_cst_opening_fee_params *opening_fee_params;
} wire_cst_receive_onchain_request;
typedef struct wire_cst_receive_payment_request {
  uint64_t amount_msat;
  struct wire_cst_list_prim_u_8_strict *description;
  struct wire_cst_list_prim_u_8_strict *preimage;
  struct wire_cst_opening_fee_params *opening_fee_params;
  bool *use_description_hash;
  uint32_t *expiry;
  uint32_t *cltv;
} wire_cst_receive_payment_request;
typedef struct wire_cst_redeem_onchain_funds_request {
  struct wire_cst_list_prim_u_8_strict *to_address;
  uint32_t sat_per_vbyte;
} wire_cst_redeem_onchain_funds_request;
typedef struct wire_cst_refund_request {
  struct wire_cst_list_prim_u_8_strict *swap_address;
  struct wire_cst_list_prim_u_8_strict *to_address;
  uint32_t sat_per_vbyte;
} wire_cst_refund_request;
typedef union ReportIssueRequestKind {
  struct wire_cst_ReportIssueRequest_PaymentFailure PaymentFailure;
} ReportIssueRequestKind;
typedef struct wire_cst_report_issue_request {
  int32_t tag;
  union ReportIssueRequestKind kind;
} wire_cst_report_issue_request;
typedef struct wire_cst_send_onchain_request {
  uint64_t amount_sat;
  struct wire_cst_list_prim_u_8_strict *onchain_recipient_address;
  struct wire_cst_list_prim_u_8_strict *pair_hash;
  uint32_t sat_per_vbyte;
} wire_cst_send_onchain_request;
typedef struct wire_cst_send_payment_request {
  struct wire_cst_list_prim_u_8_strict *bolt11;
  uint64_t *amount_msat;
  struct wire_cst_list_prim_u_8_strict *label;
} wire_cst_send_payment_request;
typedef struct wire_cst_list_tlv_entry {
  struct wire_cst_tlv_entry *ptr;
  int32_t len;
} wire_cst_list_tlv_entry;
typedef struct wire_cst_send_spontaneous_payment_request {
  struct wire_cst_list_prim_u_8_strict *node_id;
  uint64_t amount_msat;
  struct wire_cst_list_tlv_entry *extra_tlvs;
  struct wire_cst_list_prim_u_8_strict *label;
} wire_cst_send_spontaneous_payment_request;
typedef struct wire_cst_sign_message_request {
  struct wire_cst_list_prim_u_8_strict *message;
} wire_cst_sign_message_request;
typedef struct wire_cst_static_backup_request {
  struct wire_cst_list_prim_u_8_strict *working_dir;
} wire_cst_static_backup_request;
typedef struct wire_cst_aes_success_action_data_decrypted {
  struct wire_cst_list_prim_u_8_strict *description;
  struct wire_cst_list_prim_u_8_strict *plaintext;
} wire_cst_aes_success_action_data_decrypted;
void frbgen_breez_sdk_wire_prepare_redeem_onchain_funds(int64_t port_,
                                                        struct wire_cst_prepare_redeem_onchain_funds_request *req);
void frbgen_breez_sdk_wire_prepare_refund(int64_t port_,
                                          struct wire_cst_prepare_refund_request *req);
void frbgen_breez_sdk_wire_receive_onchain(int64_t port_,
                                           struct wire_cst_receive_onchain_request *req);
void frbgen_breez_sdk_wire_receive_payment(int64_t port_,
                                           struct wire_cst_receive_payment_request *req);
void frbgen_breez_sdk_wire_recommended_fees(int64_t port_);
void frbgen_breez_sdk_wire_redeem_onchain_funds(int64_t port_,
                                                struct wire_cst_redeem_onchain_funds_request *req);
void frbgen_breez_sdk_wire_redeem_swap(int64_t port_,
                                       struct wire_cst_list_prim_u_8_strict *swap_address);
void frbgen_breez_sdk_wire_refund(int64_t port_, struct wire_cst_refund_request *req);
void frbgen_breez_sdk_wire_register_webhook(int64_t port_,
                                            struct wire_cst_list_prim_u_8_strict *webhook_url);
void frbgen_breez_sdk_wire_report_issue(int64_t port_, struct wire_cst_report_issue_request *req);
void frbgen_breez_sdk_wire_rescan_swaps(int64_t port_);
void frbgen_breez_sdk_wire_send_onchain(int64_t port_, struct wire_cst_send_onchain_request *req);
void frbgen_breez_sdk_wire_send_payment(int64_t port_, struct wire_cst_send_payment_request *req);
void frbgen_breez_sdk_wire_send_spontaneous_payment(int64_t port_,
                                                    struct wire_cst_send_spontaneous_payment_request *req);
void frbgen_breez_sdk_wire_service_health_check(int64_t port_,
                                                struct wire_cst_list_prim_u_8_strict *api_key);
void frbgen_breez_sdk_wire_set_payment_metadata(int64_t port_,
                                                struct wire_cst_list_prim_u_8_strict *hash,
                                                struct wire_cst_list_prim_u_8_strict *metadata);
void frbgen_breez_sdk_wire_sign_message(int64_t port_, struct wire_cst_sign_message_request *req);
void frbgen_breez_sdk_wire_static_backup(int64_t port_, struct wire_cst_static_backup_request *req);
void frbgen_breez_sdk_wire_sync(int64_t port_);
struct wire_cst_aes_success_action_data_decrypted *frbgen_breez_sdk_cst_new_box_autoadd_aes_success_action_data_decrypted(void);