libs/sdk-flutter/lib/breez_sdk_core_bindings_generated.dart


  late final _frbgen_breez_sdk_wire_prepare_redeem_onchain_fundsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_prepare_redeem_onchain_funds_request>)>>(
      'frbgen_breez_sdk_wire_prepare_redeem_onchain_funds');
  late final _frbgen_breez_sdk_wire_prepare_redeem_onchain_funds =
      _frbgen_breez_sdk_wire_prepare_redeem_onchain_fundsPtr
          .asFunction<void Function(int, ffi.Pointer<wire_cst_prepare_redeem_onchain_funds_request>)>();

  void frbgen_breez_sdk_wire_prepare_refund(
    int port_,
    ffi.Pointer<wire_cst_prepare_refund_request> req,
  ) {
    return _frbgen_breez_sdk_wire_prepare_refund(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_prepare_refundPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_prepare_refund_request>)>>(
          'frbgen_breez_sdk_wire_prepare_refund');
  late final _frbgen_breez_sdk_wire_prepare_refund = _frbgen_breez_sdk_wire_prepare_refundPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_prepare_refund_request>)>();

  void frbgen_breez_sdk_wire_receive_onchain(
    int port_,
    ffi.Pointer<wire_cst_receive_onchain_request> req,
  ) {
    return _frbgen_breez_sdk_wire_receive_onchain(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_receive_onchainPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_receive_onchain_request>)>>(
      'frbgen_breez_sdk_wire_receive_onchain');
  late final _frbgen_breez_sdk_wire_receive_onchain = _frbgen_breez_sdk_wire_receive_onchainPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_receive_onchain_request>)>();

  void frbgen_breez_sdk_wire_receive_payment(
    int port_,
    ffi.Pointer<wire_cst_receive_payment_request> req,
  ) {
    return _frbgen_breez_sdk_wire_receive_payment(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_receive_paymentPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_receive_payment_request>)>>(
      'frbgen_breez_sdk_wire_receive_payment');
  late final _frbgen_breez_sdk_wire_receive_payment = _frbgen_breez_sdk_wire_receive_paymentPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_receive_payment_request>)>();

  void frbgen_breez_sdk_wire_recommended_fees(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_recommended_fees(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_recommended_feesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('frbgen_breez_sdk_wire_recommended_fees');
  late final _frbgen_breez_sdk_wire_recommended_fees =
      _frbgen_breez_sdk_wire_recommended_feesPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_redeem_onchain_funds(
    int port_,
    ffi.Pointer<wire_cst_redeem_onchain_funds_request> req,
  ) {
    return _frbgen_breez_sdk_wire_redeem_onchain_funds(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_redeem_onchain_fundsPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_redeem_onchain_funds_request>)>>(
      'frbgen_breez_sdk_wire_redeem_onchain_funds');
  late final _frbgen_breez_sdk_wire_redeem_onchain_funds = _frbgen_breez_sdk_wire_redeem_onchain_fundsPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_redeem_onchain_funds_request>)>();

  void frbgen_breez_sdk_wire_redeem_swap(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> swap_address,
  ) {
    return _frbgen_breez_sdk_wire_redeem_swap(
      port_,
      swap_address,
    );
  }

  late final _frbgen_breez_sdk_wire_redeem_swapPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>>(
          'frbgen_breez_sdk_wire_redeem_swap');
  late final _frbgen_breez_sdk_wire_redeem_swap = _frbgen_breez_sdk_wire_redeem_swapPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  void frbgen_breez_sdk_wire_refund(
    int port_,
    ffi.Pointer<wire_cst_refund_request> req,
  ) {
    return _frbgen_breez_sdk_wire_refund(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_refundPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_refund_request>)>>(
          'frbgen_breez_sdk_wire_refund');
  late final _frbgen_breez_sdk_wire_refund =
      _frbgen_breez_sdk_wire_refundPtr.asFunction<void Function(int, ffi.Pointer<wire_cst_refund_request>)>();

  void frbgen_breez_sdk_wire_register_webhook(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> webhook_url,
  ) {
    return _frbgen_breez_sdk_wire_register_webhook(
      port_,
      webhook_url,
    );
  }

  late final _frbgen_breez_sdk_wire_register_webhookPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>>(
          'frbgen_breez_sdk_wire_register_webhook');
  late final _frbgen_breez_sdk_wire_register_webhook = _frbgen_breez_sdk_wire_register_webhookPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  void frbgen_breez_sdk_wire_report_issue(
    int port_,
    ffi.Pointer<wire_cst_report_issue_request> req,
  ) {
    return _frbgen_breez_sdk_wire_report_issue(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_report_issuePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_report_issue_request>)>>(
          'frbgen_breez_sdk_wire_report_issue');
  late final _frbgen_breez_sdk_wire_report_issue = _frbgen_breez_sdk_wire_report_issuePtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_report_issue_request>)>();

  void frbgen_breez_sdk_wire_rescan_swaps(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_rescan_swaps(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_rescan_swapsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('frbgen_breez_sdk_wire_rescan_swaps');
  late final _frbgen_breez_sdk_wire_rescan_swaps =
      _frbgen_breez_sdk_wire_rescan_swapsPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_send_onchain(
    int port_,
    ffi.Pointer<wire_cst_send_onchain_request> req,
  ) {
    return _frbgen_breez_sdk_wire_send_onchain(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_send_onchainPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_send_onchain_request>)>>(
          'frbgen_breez_sdk_wire_send_onchain');
  late final _frbgen_breez_sdk_wire_send_onchain = _frbgen_breez_sdk_wire_send_onchainPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_send_onchain_request>)>();

  void frbgen_breez_sdk_wire_send_payment(
    int port_,
    ffi.Pointer<wire_cst_send_payment_request> req,
  ) {
    return _frbgen_breez_sdk_wire_send_payment(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_send_paymentPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_send_payment_request>)>>(
          'frbgen_breez_sdk_wire_send_payment');
  late final _frbgen_breez_sdk_wire_send_payment = _frbgen_breez_sdk_wire_send_paymentPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_send_payment_request>)>();

  void frbgen_breez_sdk_wire_send_spontaneous_payment(
    int port_,
    ffi.Pointer<wire_cst_send_spontaneous_payment_request> req,
  ) {
    return _frbgen_breez_sdk_wire_send_spontaneous_payment(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_send_spontaneous_paymentPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_send_spontaneous_payment_request>)>>(
      'frbgen_breez_sdk_wire_send_spontaneous_payment');
  late final _frbgen_breez_sdk_wire_send_spontaneous_payment =
      _frbgen_breez_sdk_wire_send_spontaneous_paymentPtr
          .asFunction<void Function(int, ffi.Pointer<wire_cst_send_spontaneous_payment_request>)>();

  void frbgen_breez_sdk_wire_service_health_check(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> api_key,
  ) {
    return _frbgen_breez_sdk_wire_service_health_check(
      port_,
      api_key,
    );
  }

  late final _frbgen_breez_sdk_wire_service_health_checkPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>>(
          'frbgen_breez_sdk_wire_service_health_check');
  late final _frbgen_breez_sdk_wire_service_health_check = _frbgen_breez_sdk_wire_service_health_checkPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  void frbgen_breez_sdk_wire_set_payment_metadata(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> hash,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> metadata,
  ) {
    return _frbgen_breez_sdk_wire_set_payment_metadata(
      port_,
      hash,
      metadata,
    );
  }

  late final _frbgen_breez_sdk_wire_set_payment_metadataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>)>>('frbgen_breez_sdk_wire_set_payment_metadata');
  late final _frbgen_breez_sdk_wire_set_payment_metadata =
      _frbgen_breez_sdk_wire_set_payment_metadataPtr.asFunction<
          void Function(
              int, ffi.Pointer<wire_cst_list_prim_u_8_strict>, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  void frbgen_breez_sdk_wire_sign_message(
    int port_,
    ffi.Pointer<wire_cst_sign_message_request> req,
  ) {
    return _frbgen_breez_sdk_wire_sign_message(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_sign_messagePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_sign_message_request>)>>(
          'frbgen_breez_sdk_wire_sign_message');
  late final _frbgen_breez_sdk_wire_sign_message = _frbgen_breez_sdk_wire_sign_messagePtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_sign_message_request>)>();

  void frbgen_breez_sdk_wire_static_backup(
    int port_,
    ffi.Pointer<wire_cst_static_backup_request> req,
  ) {
    return _frbgen_breez_sdk_wire_static_backup(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_static_backupPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_static_backup_request>)>>(
          'frbgen_breez_sdk_wire_static_backup');
  late final _frbgen_breez_sdk_wire_static_backup = _frbgen_breez_sdk_wire_static_backupPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_static_backup_request>)>();

  void frbgen_breez_sdk_wire_sync(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_sync(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_syncPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('frbgen_breez_sdk_wire_sync');
  late final _frbgen_breez_sdk_wire_sync = _frbgen_breez_sdk_wire_syncPtr.asFunction<void Function(int)>();

  ffi.Pointer<wire_cst_aes_success_action_data_decrypted>
      frbgen_breez_sdk_cst_new_box_autoadd_aes_success_action_data_decrypted() {
    return _frbgen_breez_sdk_cst_new_box_autoadd_aes_success_action_data_decrypted();
  }

  late final _frbgen_breez_sdk_cst_new_box_autoadd_aes_success_action_data_decryptedPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_aes_success_action_data_decrypted> Function()>>(
          'frbgen_breez_sdk_cst_new_box_autoadd_aes_success_action_data_decrypted');
  late final _frbgen_breez_sdk_cst_new_box_autoadd_aes_success_action_data_decrypted =
      _frbgen_breez_sdk_cst_new_box_autoadd_aes_success_action_data_decryptedPtr
          .asFunction<ffi.Pointer<wire_cst_aes_success_action_data_decrypted> Function()>();
